--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 18px;
@@ -56,7 +55,8 @@ h3 {
 #masthead {
   position: fixed;
   z-index: 99;
-  width: 100%;
+  height: 90;
+  width: 100%%;
   margin: 0 0 30px;
   overflow: auto;
   color: #ffffff;
@@ -65,6 +65,7 @@ h3 {
 }
 
 #logo {
+  position: fixed;
   float: left;
   width: 250px;
   height: 90px;
@@ -120,17 +121,12 @@ h3, h2 {
 
 /* main */
 
-#main-container {
-  padding-top: 130px;
-  min-height: calc(100vh - 70px);
-}
 
 .main-section {
   float: left;
   width: 100%;
   max-width: 960px;
-  padding: 30px;
-  margin: 0 0 40px;
+  margin:  0 40px;
   background: #ffffff;
   border: 1px solid #dddddd;
 }
@@ -187,12 +183,6 @@ h3, h2 {
   margin-bottom: 10px;
 }
 
-ul {
-  list-style-type: none;
-  margin-left: -40px;
-  line-height: 30px;
-}
-
 label,
 input[type=text],
 input[type=email],
@@ -225,255 +215,5 @@ input[type=submit] {
 
 
 
-/* media quiries for the max-width 980px */
 
-@media screen and (max-width: 980px) {
-
-#main-container {
-    height: 200px;
-    width: 700px;
-    margin-left: 30px;
-    font-size: 10px;
-    line-height: 20px;
-}
-
-#h1-portfolio {
-  margin-top: -3px;
-  width: 410px;
-  margin-bottom: 20px;
-}
-.main-section-portfolio {
-  float: left;
-  width: 45em;
-  height: 64em;
-  padding: 15px;
-  margin-bottom: 20px;
-  margin-right: 0px;
-  background: #ffffff;
-  border: 1px solid #dddddd;
-}
-
-.work {
-  position: relative;
-  float: left;
-  width: 180px;
-  overflow: auto;
-  margin-left: 5px;
-  margin-top: 10px;
-}
-
-.container {
-  width: 100%;
-  max-width: 920px;
-  margin: 0 auto;
-  clear: both;
-}
-
-#h1-contact {
-  margin-top: -5px;
-}
-
-.main-section-contact {
-  float: left;
-  width: 550px;
-  max-width: 960px;
-  padding: 20px;
-  margin: 0 0 20px;
-  background: #ffffff;
-  border: 1px solid #dddddd;
-}
-
-#contact-form {
-  margin-bottom: 10px;  
-}
-
-label,
-input[type=text],
-input[type=email],
-textarea {
-  display: block;
-  width: 100%;
-}
-
-input[type=text],
-input[type=email],
-textarea {
-  height: 25px;
-  padding: 0 10px;
-  font-size: 12px;
-  border: 1px solid #dddddd;
-}
-
-textarea {
-  height: 100px;
-}
-
-input[type=submit] {
-  padding: 10px 30px;
-  font-size: 18px;
-  color: #ffffff;
-  cursor: pointer;
-  background: #4aaaa5;
-  border: 0 none;
-}
-
-label {
-  font-size: 14px;
-}
-
-
-
-
-/* media querie for max-width 768 */
-
-@media screen and (max-width: 768px) {
-
-
-#masthead {
-  position: fixed;
-  z-index: 99;
-  width: 100%;
-  margin: 0 0 30px;
-  overflow: auto;
-  color: #ffffff;
-  background: #ffffff;
-  border-bottom: 2px solid #cccccc;
-}
-
-#logo {
-  float: left;
-  width: 200px;
-  height: 90px;
-  margin-left: 20px;
-  font-family: Georgia, Times, "Times New Roman", serif;
-  font-size: 30px;
-  font-weight: 700;
-  line-height: 90px;
-  color: #ffffff;
-  text-align: center;
-  text-decoration: none;
-  background: #4aaaa5;
-}
-
-nav {
-  float: left;
-  margin-top: 25px;
-  margin-left: 240px;
-}
-
-nav a {
-  display: inline-block;
-  padding-left: 15px;
-  margin-left: 15px;
-  line-height: 18px;
-  color: #999;
-  text-decoration: none;
-  border-left: 1px solid #efefef;
-}
-
-nav a:first-child {
-  border-left: 0 none;
-6}
-
-
-/* portfolio page media queries */
-#h1-portfolio {
-  width: 615px;
-  margin-bottom: 20px;
-  margin-left: 20px;
-}
-.main-section-portfolio {
-  float: left;
-  width: 70em;
-  height: 88em;
-  margin-bottom: 20px;
-  margin-right: 15px;
-  background: #ffffff;
-  border: 1px solid #dddddd70;
-}
-
-.work {
-  position: relative;
-  width: 40%;
-  height: 225px;
-  margin-left: 20px;
-  margin-right: 50px;
-}
-
-.work h3 {
-  position: absolute;
-  bottom: 15px;
-  width: 100%;
-  padding: 15px;
-  margin-bottom: 20px;
-  font-weight: 300;
-  line-height: 30px;
-  color: #ffffff;
-  text-align: center;
-  background: #4aaaa5;
-  border-bottom: 0;
-}
-
-
-#h1-contact {
-  margin-top: -5px;
-}
-
-.main-section-contact {
-  float: left;
-  width: 70em;
-  max-width: 960px;
-  padding: 20px;
-  margin: 0 0 20px;
-  background: #ffffff;
-  border: 1px solid #dddddd;
-}
-
-#contact-form {
-  margin-bottom: 10px;  
-}
-
-label,
-input[type=text],
-input[type=email],
-textarea {
-  display: block;
-  width: 100%;
-}
-
-input[type=text],
-input[type=email],
-textarea {
-  height: 25px;
-  padding: 0 10px;
-  font-size: 12px;
-  border: 1px solid #dddddd;
-}
-
-textarea {
-  height: 100px;
-}
-
-input[type=submit] {
-  padding: 10px 30px;
-  font-size: 18px;
-  color: #ffffff;
-  cursor: pointer;
-  background: #4aaaa5;
-  border: 0 none;
-}
-
-label {
-  font-size: 14px;
-}
-
-footer {
-left: 0;
-bottom: 0;
-height: 50px;
-width: 100%;
-}
-
-@media screen and (min-width: 640px) {
-
-}
+*/
