--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -366,7 +366,42 @@
           #main-container {
               width: 60px;
           }
-      
+          #h1-portfolio {
+            width: 480px;
+            margin-bottom: 20px;
+            margin-left: 20px;
+            margin-top: 10px;
+          }
+          .main-section-portfolio {
+            float: left;
+            width: 550px;
+            height: 2020px;
+            margin-bottom: 20px;
+            margin-right: 15px;
+            background: #ffffff;
+            border: 1px solid #dddddd70;
+          }
+          
+          .work {
+            position: relative;
+            width: 450px;
+            height: 350px;
+            margin-left: 30px;
+          }
+          
+          .work h3 {
+            position: absolute;
+            bottom: 15px;
+            width: 100%;
+            padding: 15px;
+            margin-bottom: 20px;
+            font-weight: 300;
+            line-height: 30px;
+            color: #ffffff;
+            text-align: center;
+            background: #4aaaa5;
+            border-bottom: 0;
+          }
     }
     
     /* ***********************************************
