--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -375,7 +375,7 @@
           .main-section-portfolio {
             float: left;
             width: 550px;
-            height: 2020px;
+            height: 2050px;
             margin-bottom: 20px;
             margin-right: 15px;
             background: #ffffff;
@@ -402,6 +402,62 @@
             background: #4aaaa5;
             border-bottom: 0;
           }
+
+          .main-section-contact {
+            float: left;
+            width: 500px;
+            height: 550px;
+            max-width: 640px;
+            padding: 20px;
+            margin-left: 30px;
+            margin-bottom: 200px;
+            background: #ffffff;
+            border: 1px solid #dddddd;
+          }
+          
+          #contact-form {
+            margin-bottom: 10px;  
+          }
+
+          ul {
+            margin-left: -30px;
+            list-style-type: none;
+          }
+          
+          label,
+          input[type=text],
+          input[type=email],
+          textarea {
+            display: block;
+            width: 100%;
+          }
+          
+          input[type=text],
+          input[type=email],
+          textarea {
+            height: 25px;
+            padding: 0 10px;
+            font-size: 12px;
+            border: 1px solid #dddddd;
+          }
+          
+          textarea {
+            height: 200px;
+          }
+          
+          input[type=submit] {
+            padding: 10px 30px;
+            font-size: 18px;
+            color: #ffffff;
+            cursor: pointer;
+            background: #4aaaa5;
+            border: 0 none;
+          }
+          
+          label {
+            font-size: 14px;
+          }
+          
     }
     
     /* ***********************************************
