--- a/assets 2/css/style.css
+++ b/assets 2/css/style.css
@@ -1,9 +1,11 @@
 body {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 18px;
-  line-height: 34px;
+  font-size: 16px;
+  line-height: 30px;
   color: #777777;
   background: url("../images/concrete_seamless.png");
+  margin: 0;
+  padding: 0;
 }
 
 * {
@@ -39,6 +41,8 @@ h3 {
 }
 
 h1 {
+  margin-top: 0;
+  padding-top: 0;
   padding-bottom: 20px;
   font-size: 30px;
   line-height: 49px;
@@ -55,8 +59,7 @@ h3 {
 #masthead {
   position: fixed;
   z-index: 99;
-  height: 90;
-  width: 100%%;
+  width: 100%;
   margin: 0 0 30px;
   overflow: auto;
   color: #ffffff;
@@ -65,7 +68,6 @@ h3 {
 }
 
 #logo {
-  position: fixed;
   float: left;
   width: 250px;
   height: 90px;
@@ -96,14 +98,17 @@ nav a {
 
 nav a:first-child {
   border-left: 0 none;
+  padding-left: 0;
+  margin-left: 0;
 }
 
 /* footer */
 
 footer {
-  padding: 30px 0;
+  padding: 30px 0 40px 0;
   clear: both;
   font-size: 12px;
+  line-height: 1;
   color: #ffffff;
   color: #cccccc;
   text-align: center;
@@ -121,12 +126,17 @@ h3, h2 {
 
 /* main */
 
+#main-container {
+  padding-top: 130px;
+  min-height: calc(100vh - 70px);
+}
 
 .main-section {
   float: left;
   width: 100%;
   max-width: 960px;
-  margin:  0 40px;
+  padding: 30px;
+  margin: 0 0 40px;
   background: #ffffff;
   border: 1px solid #dddddd;
 }
@@ -176,11 +186,13 @@ h3, h2 {
 /* contact page */
 
 #contact-form ul {
-  margin-bottom: 20px;
+  margin: 0;
+  padding: 0;
 }
 
 #contact-form li {
   margin-bottom: 10px;
+  list-style: none;
 }
 
 label,
@@ -213,7 +225,139 @@ input[type=submit] {
   border: 0 none;
 }
 
+@media screen and (min-width: 980px) {
+  /* portfolio.html */
 
+  .work {
+    width: 48%;
+    margin-bottom: 0;
+  }
 
+  .work:nth-child(even) {
+    margin-right: 20px;
+    float: left;
+  }
 
-*/
+  .work:nth-child(odd) {
+    float: right;
+  }
+}
+
+@media screen and (max-width: 980px) {
+
+  /* index.html */
+
+  .container {
+    padding: 0 50px;
+  }
+
+  section.main-section {
+    max-width: 600px;
+  }
+
+  .auth-image {
+    width: 250px;
+  }
+
+  /* portfolio.html */
+
+  .work {
+    width: 48%;
+    margin-bottom: 0;
+  }
+
+  .work:nth-child(even) {
+    margin-right: 20px;
+    float: left;
+  }
+
+  .work:nth-child(odd) {
+    float: right;
+  }
+}
+
+@media screen and (max-width: 768px) {
+
+  /* All html */
+
+  .container {
+    padding: 0 20px;
+  }
+
+  section.main-section {
+    max-width: 768px;
+  }
+
+  /* index.html */
+
+  .auth-image {
+    width: 300px;
+  }
+
+  /* portfolio.html */
+
+  .work {
+    width: 48%;
+    margin-bottom: 0;
+  }
+
+  .work:nth-child(even) {
+    margin-right: 20px;
+    float: left;
+  }
+
+  .work:nth-child(odd) {
+    float: right;
+  }
+
+@media screen and (max-width: 640px) {
+
+/* All html */
+
+#masthead {
+  position: static;
+  margin-bottom: 20px;
+}
+
+  .container {
+    margin: 0;
+    padding: 0;
+  }
+
+  #logo,
+  nav {
+    float: none;
+    display: block;
+    width: 100%;
+    text-align: center;
+  }
+
+  nav {
+    margin: 10px 0;
+  }
+
+  #main-container {
+    margin: 0 auto;
+    padding: 0 20px;
+  }
+
+  section.main-section {
+    padding: 20px;
+  }
+
+  /* index.html */
+
+  .auth-image {
+    float: none;
+    width: 100%;
+    margin: 0;
+  }
+
+  /* portfolio.html */
+
+  .work {
+    width: 100%;
+    margin-bottom: 0;
+  }
+
+}
